# TUN_STT_MODEL

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  file_list.txt  play_all.sh  pyproject.toml  shutdown_when_training_done.sh
.github/workflows/: ci.yml
dataset/: bad_rows_report.csv  build_phase05_manifests.py  create_clean_metadata.py  metadata_all.csv  metadata_clean.csv  metadata_removed.csv  metadata_test.csv  metadata_train.csv  metadata_valid.csv  prepare_phase05_experiment_b.py  repair_metadata_all_block.py  split_dataset.py  text_normalization.py  validate_dataset.py
dataset/audits/: phase05_benchmark_reference_audit.csv  phase05_experiment_b_training_audit.csv
docs/: normalization_policy.md  phase03_full_finetune_runbook.md  phase05_experiment_b_preparation.md  phase05_targeted_improvements_runbook.md  project_roadmap.md
reports/: experiment_history.csv
reports/phase05_preparation/: experiment_a_freeze.md  summary.md
reports/runs/phase02-local-smoke-test-v2/: summary.md  (+5 more)
requirements/: dev.txt  runtime.txt
tests/: test_analyze_errors.py  test_baseline_reporting.py  test_build_phase05_manifests.py  test_decoding.py  test_evaluate_checkpoint_reporting.py  test_prepare_phase05_experiment_b.py  test_project_sanity.py  test_repair_metadata_all_block.py  test_text_normalization.py  test_train_whisper_small.py  test_transcribe_one_audio.py
training/: analyze_errors.py  baseline_test.py  check_dataset.py  decoding.py  evaluate_checkpoint.py  test_whisper_small.py  train_whisper_small.py  transcribe_one_audio.py
(+67 files in other folders)
