[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tun-stt-model"
version = "0.1.0"
description = "Utilities for preparing and evaluating Tunisian Derja Whisper fine-tuning data."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "data-env",
    "train-env",
    ".venv",
    "dataset/extracted_wavs",
    "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
